[package]
name = "peers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
hyper = "0.14.23"
hyper-tungstenite = "0.9.0"
tungstenite = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = "0.6.0"
rand = "0.8.5"


